@@ -1,4 +1,8 @@
 2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
+	* gumps/Slider_gump.cc: allow clicking on scroller area to quickly
+	  move to the desired position
+
+2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
 	* bggame.cc: worked on getting correct timing of Guardian in intro.
 	  It should work at all resolutions/scaling factors.
 	* gamewin.cc: made plasma 8 times faster
